deploy: 06ecbdf9f73c5f54128446f11c54abc2b0d23749

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -31,7 +31,7 @@
     
   
   <meta name="description" content="Here’s your roadmap for the semester!
-  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due     Week 1 (8/30) Introduction to Data Science tools: R, Python, Quarto, Git, command line tools       Week 2 (9/6) GitHub, Version Control, &amp; Reproducible Research       Week 3 (9/13) Exploratory Data Analysis      Week 4 (9/20) Data Visualization       Week 5 (9/27) Data Cleaning and Wrangling      Week 6 (10/4) Text Mining &amp; Sentiment Analysis       Week 7 (10/11) NO CLASS - Fall Recess.">
+  Optional reading material to supplement lecture material  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due     Week 1 (8/30) Introduction to Data Science tools: R, Python, Quarto, Git, command line tools       Week 2 (9/6) GitHub, Version Control, &amp; Reproducible Research       Week 3 (9/13) Exploratory Data Analysis      Week 4 (9/20) Data Visualization       Week 5 (9/27) Data Cleaning and Wrangling      Week 6 (10/4) Text Mining &amp; Sentiment Analysis       Week 7 (10/11) NO CLASS - Fall Recess.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/schedule/">
@@ -247,7 +247,7 @@
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/schedule/">
   <meta property="og:title" content="Schedule | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Here’s your roadmap for the semester!
-  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due     Week 1 (8/30) Introduction to Data Science tools: R, Python, Quarto, Git, command line tools       Week 2 (9/6) GitHub, Version Control, &amp; Reproducible Research       Week 3 (9/13) Exploratory Data Analysis      Week 4 (9/20) Data Visualization       Week 5 (9/27) Data Cleaning and Wrangling      Week 6 (10/4) Text Mining &amp; Sentiment Analysis       Week 7 (10/11) NO CLASS - Fall Recess."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+  Optional reading material to supplement lecture material  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due     Week 1 (8/30) Introduction to Data Science tools: R, Python, Quarto, Git, command line tools       Week 2 (9/6) GitHub, Version Control, &amp; Reproducible Research       Week 3 (9/13) Exploratory Data Analysis      Week 4 (9/20) Data Visualization       Week 5 (9/27) Data Cleaning and Wrangling      Week 6 (10/4) Text Mining &amp; Sentiment Analysis       Week 7 (10/11) NO CLASS - Fall Recess."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -517,7 +517,7 @@
     <div class="article-style">
       <p>Here’s your roadmap for the semester!</p>
 <ul>
-<li><i class="fas fa-book-reader"></i> Readings should be completed <em><strong>before</strong></em> each class session</li>
+<li><i class="fas fa-book-reader"></i> Optional reading material to supplement lecture material</li>
 <li><i class="fas fa-chalkboard-teacher"></i> Class materials (slides, in-class activities, etc.) will be added on the day of class</li>
 <li><i class="fas fa-laptop-code"></i> Assignments are due by <strong>11:59 PM</strong> on the day they are due</li>
 </ul>
