--- a/assignment/03-lab/index.html
+++ b/assignment/03-lab/index.html
@@ -568,9 +568,8 @@ Lab Description We will work with the meteorological data presented in lecture."
 <p>As you do this, think about what questions you would like to ask regarding this data. What would you ask a collaborator who was more familiar with it?</p>
 <h1 id="lab-description">Lab Description</h1>
 <p>We will work with the meteorological data presented in lecture. Recall the dataset consists of weather station readings in the continental US.</p>
-<p><strong>The objectives of the lab are to find the weather station with the highest elevation and look at patterns in the time series of its wind speed and temperature.</strong></p>
-<h1 id="steps">Steps</h1>
-<h3 id="1-read-in-the-data">1. Read in the data</h3>
+<h3 id="the-objectives-of-the-lab-are-to-find-the-weather-station-with-the-highest-elevation-and-look-at-patterns-in-the-time-series-of-its-wind-speed-and-temperature"><strong>The objectives of the lab are to find the weather station with the highest elevation and look at patterns in the time series of its wind speed and temperature.</strong></h3>
+<h1 id="1-read-in-the-data">1. Read in the data</h1>
 <p>First download and then read in with <code>data.table::fread()</code>. This is slightly faster than some of the more common functions, such as <code>read.table</code>, but it produces a different type of object, which is why we need to convert it into a <code>data.frame</code> after reading it in.</p>
 <pre><code class="language-r">download.file(
   &quot;https://raw.githubusercontent.com/USCbiostats/data-science-data/master/02_met/met_all.gz&quot;,
@@ -582,12 +581,12 @@ Lab Description We will work with the meteorological data presented in lecture."
 met &lt;- data.table::fread(file.path(&quot;~&quot;, &quot;Downloads&quot;, &quot;met_all.gz&quot;))
 met &lt;- as.data.frame(met)
 </code></pre>
-<h3 id="2-check-the-dimensions-headers-footers">2. Check the dimensions, headers, footers.</h3>
-<p><strong>How many columns, rows are there? Some useful functions for this are <code>dim</code>, <code>head</code>, and <code>tail</code></strong></p>
-<h3 id="3-take-a-look-at-the-variables">3. Take a look at the variables.</h3>
-<p><strong>Show the type (class) of each variable (hint: try the <code>str</code> function).</strong></p>
-<p><strong>What are the names of the key variables related to our question of interest?</strong></p>
-<h3 id="4-take-a-closer-look-at-the-key-variables">4. Take a closer look at the key variables.</h3>
+<h1 id="2-check-the-dimensions-headers-footers">2. Check the dimensions, headers, footers.</h1>
+<h3 id="how-many-columns-rows-are-there-some-useful-functions-for-this-are-dim-head-and-tail"><strong>How many columns, rows are there? Some useful functions for this are <code>dim</code>, <code>head</code>, and <code>tail</code>.</strong></h3>
+<h1 id="3-take-a-look-at-the-variables">3. Take a look at the variables.</h1>
+<h3 id="show-the-type-class-of-each-variable-hint-try-the-str-function"><strong>Show the type (class) of each variable (hint: try the <code>str</code> function).</strong></h3>
+<h3 id="what-are-the-names-of-the-key-variables-related-to-our-question-of-interest"><strong>What are the names of the key variables related to our question of interest?</strong></h3>
+<h1 id="4-take-a-closer-look-at-the-key-variables">4. Take a closer look at the key variables.</h1>
 <pre><code class="language-r">table(met$year)
 </code></pre>
 <pre><code>## 
@@ -638,7 +637,7 @@ summary(met$elev)
 <pre><code>##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max.    NA's 
 ##     -13     101     252     413     400    4113     710
 </code></pre>
-<p><strong>At what elevation is the highest weather station?</strong></p>
+<h3 id="at-what-elevation-is-the-highest-weather-station"><strong>At what elevation is the highest weather station?</strong></h3>
 <p>We also have the issue of the minimum temperature being -40C, which seems implausible, so we should remove those observations.</p>
 <pre><code class="language-r">met &lt;- met[met$temp &gt; -40, ]
 head(met[order(met$temp), ])
@@ -674,14 +673,14 @@ head(met[order(met$temp), ])
 </code></pre>
 <p>There are still some suspiciously low values for temperature (-17.2C), but we will deal with those later.</p>
 <p>We should also check the wind speed variable for any abnormalities.</p>
-<p><strong>How many missing values are there in the <code>wind.sp</code> variable?</strong></p>
-<h3 id="5-check-the-data-against-an-external-data-source">5. Check the data against an external data source.</h3>
+<h3 id="how-many-missing-values-are-there-in-the-windsp-variable"><strong>How many missing values are there in the <code>wind.sp</code> variable?</strong></h3>
+<h1 id="5-check-the-data-against-an-external-data-source">5. Check the data against an external data source.</h1>
 <p>We should check the suspicious temperature value (where is it located?) and validate that the range of elevations make sense (-13m to 4113m).</p>
 <p>Google is your friend here.</p>
 <p>Fix any problems that arise in your checks.</p>
-<p><strong>Where was the location for the coldest temperature readings (-17.2C)? Do these seem reasonable in context?</strong></p>
-<p><strong>Does the range of values for elevation make sense? Why or why not?</strong></p>
-<h3 id="6-calculate-summary-statistics">6. Calculate summary statistics</h3>
+<h3 id="where-was-the-location-for-the-coldest-temperature-readings--172c-do-these-seem-reasonable-in-context"><strong>Where was the location for the coldest temperature readings (-17.2C)? Do these seem reasonable in context?</strong></h3>
+<h3 id="does-the-range-of-values-for-elevation-make-sense-why-or-why-not"><strong>Does the range of values for elevation make sense? Why or why not?</strong></h3>
+<h1 id="6-calculate-summary-statistics">6. Calculate summary statistics</h1>
 <p>Remember to keep the initial question in mind. We want to pick out the weather station with maximum elevation and examine its wind speed and temperature.</p>
 <p>Some ideas: select the weather station with maximum elevation; look at the correlation between temperature and wind speed; look at the correlation between temperature and wind speed with hour and day of the month.</p>
 <pre><code class="language-r">elev &lt;- met[which(met$elev == max(met$elev, na.rm = TRUE)), ]
@@ -767,9 +766,9 @@ summary(elev)
 <pre><code>## [1] -0.003857766
 </code></pre>
 <p>The <code>use=&quot;complete&quot;</code> argument is another thing we added to avoid compounding <code>NA</code>s.</p>
-<h3 id="7-exploratory-graphs">7. Exploratory graphs</h3>
+<h1 id="7-exploratory-graphs">7. Exploratory graphs</h1>
 <p>We should look at the distributions of all of the key variables to make sure there are no remaining issues with the data.</p>
-<p><strong>Use the <code>hist</code> function to make histograms of the elevation, temperature, and wind speed variables for the whole dataset</strong></p>
+<h3 id="use-the-hist-function-to-make-histograms-of-the-elevation-temperature-and-wind-speed-variables-for-the-whole-dataset"><strong>Use the <code>hist</code> function to make histograms of the elevation, temperature, and wind speed variables for the whole dataset</strong></h3>
 <p>One thing we should consider for later analyses is to log transform wind speed and elevation as they are very skewed.</p>
 <p>Look at where the weather station with highest elevation is located.</p>
 <pre><code class="language-r">leaflet(elev) %&gt;%
@@ -830,13 +829,15 @@ head(elev)
 ## 221702 2019-08-01 02:00:00
 </code></pre>
 <p>With the date-time variable we can plot the time series of temperature and wind speed.</p>
-<p><strong>Use the <code>plot</code> function to make line graphs of temperature vs. date and wind speed vs. date</strong></p>
-<p><strong>Summarize any trends that you see in these time series plots.</strong></p>
-<h3 id="8-ask-questions">8. Ask questions</h3>
-<p>By now, you might have some specific questions about how the data was gathered and what some of the different variables and values mean. Alternatively, maybe you have an idea for how some of the variable should be related and you want to explore that relationship. In a real-world analysis, these questions could potentially be answered by a collaborator, who may have been part of the team that collected the data. What questions do you have about the data?</p>
+<h3 id="use-the-plot-function-to-make-line-graphs-of-temperature-vsdate-and-wind-speed-vsdate"><strong>Use the <code>plot</code> function to make line graphs of temperature vs. date and wind speed vs. date</strong></h3>
+<h3 id="summarize-any-trends-that-you-see-in-these-time-series-plots"><strong>Summarize any trends that you see in these time series plots.</strong></h3>
+<h1 id="8-ask-questions">8. Ask questions</h1>
+<p>By now, you might have some specific questions about how the data was gathered and what some of the different variables and values mean. Alternatively, maybe you have an idea for how some of the variable should be related and you want to explore that relationship. In a real-world analysis, these questions could potentially be answered by a collaborator, who may have been part of the team that collected the data.</p>
+<h3 id="what-questions-do-you-have-about-the-data">What questions do you have about the data?</h3>
 <p>If you haven’t already, now would be a good time to look at the accompanying 
 <a href="https://github.com/USCbiostats/data-science-data/blob/master/02_met/met-datadictionary.pdf" target="_blank" rel="noopener">data dictionary</a> for this dataset and see if it can answer any of your questions. If you have questions about the nature of the dataset and how it was gathered, this might be able to help.</p>
-<p>For questions about variables in the dataset or relationships between them, try making some more exploratory plots. Do you see the patterns you would expect? There are many different types of summaries and visualization strategies that we have not discussed, but which could provide interesting perspectives on the data.</p>
+<h3 id="for-questions-about-variables-in-the-dataset-or-relationships-between-them-try-making-some-more-exploratory-plots-do-you-see-the-patterns-you-would-expect">For questions about variables in the dataset or relationships between them, try making some more exploratory plots. Do you see the patterns you would expect?</h3>
+<p>There are many different types of summaries and visualization strategies that we have not discussed, but which could provide interesting perspectives on the data.</p>
 <p>Some other useful plotting functions include:</p>
 <ul>
 <li><code>pairs</code> for making all pairwise scatter plots in a dataset with &gt;2 dimensions.</li>
