--- a/assignment/08-midterm/index.html
+++ b/assignment/08-midterm/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Due Sunday, October 27th, 2024 by midnight Pacific Time.
+  <meta name="description" content="Due Sunday, October 27th, 2024 by 11:59pm Pacific Time.
 Learning Objective: To apply the skills learned in PM 566 (through Week 6) by analyzing and interpreting a dataset of your choice.
 Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt. This midterm is a stepping stone for the final project. The first step in any data analysis is to have a dataset for which you have formulated an interesting question.">
 
@@ -247,7 +247,7 @@ Narrative: Through this project you will launch a portfolio of data science proj
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/08-midterm/">
   <meta property="og:title" content="Midterm Exam/Project | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Due Sunday, October 27th, 2024 by midnight Pacific Time.
+  <meta property="og:description" content="Due Sunday, October 27th, 2024 by 11:59pm Pacific Time.
 Learning Objective: To apply the skills learned in PM 566 (through Week 6) by analyzing and interpreting a dataset of your choice.
 Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt. This midterm is a stepping stone for the final project. The first step in any data analysis is to have a dataset for which you have formulated an interesting question."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
@@ -551,7 +551,7 @@ Narrative: Through this project you will launch a portfolio of data science proj
   <div class="article-container">
 
     <div class="article-style">
-      <p>Due <strong>Sunday, October 27th, 2024</strong> by midnight Pacific Time.</p>
+      <p>Due <strong>Sunday, October 27th, 2024</strong> by 11:59pm Pacific Time.</p>
 <p><strong>Learning Objective</strong>: To apply the skills learned in PM 566 (through Week 6) by analyzing and interpreting a dataset of your choice.</p>
 <p><strong>Narrative</strong>: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt. This midterm is a stepping stone for the final project.
 The first step in any data analysis is to have a dataset for which you have formulated an interesting question. If you do not have a dataset to work with, you may choose one from our 
