deploy: 2200ca090adc7d1e50cbcd5a328509371900faab

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -694,7 +694,7 @@ Time: Friday 9am - 12:55pm"><meta property="og:image" content="https://uscbiosta
             </tr>
             <tr>
              <td align="right" style="width:20%;text-align:left">Week 9 (10/25)</td>
-             <td style="width:50%;text-align:left">(Midterm Project due) High Performance Computing, Cloud Computing</td>
+             <td style="width:50%;text-align:left">High Performance Computing, Cloud Computing</td>
             </tr>
             <tr>
              <td align="right" style="width:20%;text-align:left">Week 10 (11/1)</td>
