--- a/schedule/index.html
+++ b/schedule/index.html
@@ -654,7 +654,7 @@
         </tr>
         <tr>
             <td align="right" style="width:20%;text-align:right">Week 9 (10/25)</td>
-            <td style="width:50%;text-align:left">(Midterm Project due) High Performance Computing, Cloud Computing</td>
+            <td style="width:50%;text-align:left">High Performance Computing, Cloud Computing</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/09-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
