deploy: b3e48fc7154ecab100aa5acabf21d78bb00c5726

--- a/assignment/14-final/index.html
+++ b/assignment/14-final/index.html
@@ -566,19 +566,17 @@ formulated a clear and concise question to answer. You will apply the skills lea
 <li>Website (summarize your analysis, include interactive figures, provide a link to download the full written report)</li>
 </ul>
 <h3 id="written-report">Written report</h3>
-<p>The actual analysis should be included in the PDF report. The PDF report can refer to interactive visualizations included in the website, but otherwise all figures and tables should be included in the PDF.</p>
-<p>The report should have the following sections (elaborate
-from what was written in the midterm):
-<strong>Introduction</strong> (provide background on your
-dataset and formulated question), <strong>Methods</strong>
-(include how and where the data were acquired, how you cleaned and
-wrangled the data, what tools you used for data exploration),
-<strong>Results</strong> (provide final, publication ready
-tables and figures from your analysis, make separate subsections as needed),
-and a brief <strong>Conclusion and Summary</strong> where
-you describe your findings.</p>
+<p>The actual analysis should be included in the PDF report. For the analysis, we will expect to see a cleaner report than for the midterm, with more sophisticated analysis. Regardless of how well you did on the midterm, we want to see improvements, either by fixing your mistakes or adding more data or questions to your analysis.</p>
+<p>The PDF report can make references to interactive visualizations included in the website, but otherwise all figures and tables should be included in the PDF.</p>
+<p>The report should have the following sections:</p>
+<ul>
+<li><strong>Introduction</strong>: provide background on your dataset and formulated question)</li>
+<li><strong>Methods</strong>: include how and where the data were acquired, how you cleaned and wrangled the data, what tools you used for data exploration</li>
+<li><strong>Results</strong>: provide final, publication-ready tables and figures from your analysis, make separate subsections as needed</li>
+<li><strong>Conclusion and Summary</strong>: a brief recap where you describe your findings.</li>
+</ul>
 <p>In your report, please do not include any code (so make sure
-<code>echo = FALSE</code>), unformatted output, or dataset summaries (e.g. output from head(), str(), etc.)</p>
+<code>echo = FALSE</code>), unformatted output, or partial datasets (e.g. output from <code>head()</code>, <code>str()</code>, etc.)</p>
 <h3 id="website-checklist">Website Checklist</h3>
 <p>See the checklist below for additional details about the website requirements:</p>
 <ol>
@@ -615,22 +613,12 @@ and PDF report, to the GitHub repository.</span></p>
 <p><span dir="ltr">Make sure that the <strong>website</strong>, which is to be
 <strong>hosted in GitHub pages</strong>, actually <strong>works</strong>, i.e., figures and
 interactive visualizations are properly rendered when visiting the
-website.</span></p>
-</li>
-<li>
-<p><span dir="ltr">Have a <code>README.md</code> file in the upper level of
-the repository. This file provides general information about the
-project, like title, brief description, etc.</span></p>
-</li>
-<li>
-<p><span dir="ltr">The <code>README.md</code> file should provide a link to the website, e.g.
-
-<a href="https://USERNAME.github.io/pm566-project" target="_blank" rel="noopener">https://USERNAME.github.io/pm566-project</a>.</span></p>
+website (Hint: double check the URL! Make sure you aren&rsquo;t looking at your local version).</span></p>
 </li>
 <li>
 <p><span dir="ltr">Have a <code>data</code> folder with either the dataset or
-instructions about how to acquire it. You should provide the
-instructions in a <code>README.md</code> file within that folder.</span></p>
+instructions about how to acquire it. If necessary, you should provide the
+instructions for acquiring the data in a <code>README</code> file within that folder.</span></p>
 </li>
 </ol>
 
